# Frontier-Indexer

./: .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  justfile  pipelines.toml
docs/developers/: database.md  world_contracts.md
docs/users/: configuration.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2026-04-05-155256-0000_characters/: up.sql
migrations/2026-04-07-173125-0000_events_character_created/: down.sql  up.sql
migrations/2026-04-08-040739-0000_owner_caps/: down.sql  up.sql
migrations/2026-04-08-092749-0000_events_owner_cap_created/: down.sql  up.sql
migrations/2026-04-08-092808-0000_events_owner_cap_transferred/: down.sql  up.sql
migrations/2026-04-08-180836-0000_assemblies/: down.sql  up.sql
migrations/2026-04-09-055842-0000_events_status_changed/: up.sql
migrations/2026-04-09-064151-0000_events_location_revealed/: down.sql  up.sql
migrations/2026-04-09-064529-0000_events_assembly_created/: down.sql  up.sql
migrations/2026-04-10-073046-0000_system_table_registry/: down.sql  up.sql
migrations/2026-04-10-104450-0000_energy_config/: down.sql  up.sql
migrations/2026-04-11-141833-0000_events_energy_production_started/: down.sql  up.sql
migrations/2026-04-11-205027-0000_events_energy_production_stopped/: down.sql  up.sql
migrations/2026-04-12-074029-0000_events_energy_released/: down.sql  up.sql
migrations/2026-04-12-082039-0000_events_energy_reserved/: down.sql  up.sql
migrations/2026-04-12-110902-0000_events_fuel_efficiency_set/: down.sql  up.sql
migrations/2026-04-12-114652-0000_events_fuel_efficiency_removed/: down.sql  up.sql
migrations/2026-04-12-133529-0000_fuel_config/: down.sql  up.sql
migrations/2026-04-12-142929-0000_events_fuel_burning_started/: down.sql  up.sql
migrations/2026-04-12-142941-0000_events_fuel_burning_stopped/: down.sql  up.sql
migrations/2026-04-12-142946-0000_events_fuel_burning_updated/: down.sql  up.sql
migrations/2026-04-12-142957-0000_events_fuel_deleted/: down.sql  up.sql
migrations/2026-04-12-143004-0000_events_fuel_deposited/: down.sql  up.sql
migrations/2026-04-12-143014-0000_events_fuel_withdrawn/: down.sql  up.sql
migrations/2026-04-13-060026-0000_killmails/: down.sql  up.sql
migrations/2026-04-13-103347-0000_events_turret_created/: up.sql  (+1 more)
scripts/: compose.sh
src/: config.rs  lib.rs  main.rs  pipelines.rs  schema.rs  traits.rs
(+199 files in other folders)
