[package]
name = "indexer"
version = "0.3.5"
edition = "2021"

[dependencies]
tokio = "1.47.1"
serde = "1.0.217"
serde_json = "1.0.138"
anyhow = "1.0.98"
tracing = "0.1.41"
clap = "4.5.31"
async-trait = "0.1.83"
bcs = "0.1.6"
url = "2.5.4"
dotenvy = "0.15"
hex = "0.4"
bigdecimal = "0.4"
prometheus = "0.14.0"
strum = "0.28.0"
strum_macros = "0.28.0"
futures = "0.3.32"

# References forked sui with custom framework
sui-pg-db = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }
sui-types = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }
move-core-types = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }
telemetry-subscribers = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }
sui-indexer-alt-metrics = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }
sui-indexer-alt-framework = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }
sui-indexer-alt-framework-store-traits = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "048124e484f14b9bf2a402227c9bc255c7621bc1" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "048124e484f14b9bf2a402227c9bc255c7621bc1" }

# Database
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
diesel-async = { version = "0.5.2", features = ["bb8", "postgres", "async-connection-wrapper"] }

# Transports
async-nats = "0.38"
lapin = "2"
deadpool-lapin = { version  = "0.12", features = ["rt_tokio_1"] }
socketioxide = { version  = "0.15", features = ["v4"] }
redis = { version  = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
chrono = "0.4.39"
serde_json = "1.0.140"

insta = { version = "1.43.1", features = ["json"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }

sui-storage = { git = "https://github.com/Ocky-Public/sui.git", branch = "testnet" }

[[bin]]
name = "indexer"
path = "src/main.rs"
